--- a/style.css
+++ b/style.css
@@ -28,3 +28,11 @@ li {
   text-decoration: line-through;
   color: gray;
 }
+/* Cambio realizado por Laura */
+button {
+background-color: #007bff;
+color: white;
+border: none;
+border-radius: 4px;
+}
+
